# simplemind-ng

./: .envrc.template  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: conf.py
docs/plans/: 2026-01-14-gemini-api-migration-design.md
examples/: _context.py  bible_verses.py  contextual_memory.py  conversation_stream.py  cooking_recipe_example.py  discussion.py  enhanced_context.py  four_way_conversation.py  inspiration_plugin.py  math_plugin.py  medicine_data.py  mood_detector_plugin.py  multi_llm_discussion.py  simple_logging_plugin.py  simple_memory.py  tool_calling.py  translate_text.py  two_llms_talking.py  web_bible_explorer.py
simplemind_ng/: __init__.py  logging.py  models.py  settings.py
simplemind_ng/providers/: __init__.py  _base.py  amazon.py  anthropic.py  gemini.py  groq.py  ollama.py  openai.py  xai.py
tests/: conftest.py  test_conversations.py  test_generate_data.py  test_generate_text.py  test_tools.py
