[project]
name = "simplemind-ng"
version = "0.4.0"
description = "A maintained next-generation fork of simplemind with ongoing development and modern LLM features."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic", "pydantic-settings", "instructor", "logfire"]

[project.optional-dependencies]
full = [
    "openai",
    "anthropic",
    "groq",
    "google-generativeai",
    "botocore",
    "boto3",
]
amazon = ["boto3", "botocore", "anthropic"]
anthropic = ["anthropic"]
gemini = ["google-generativeai", "jsonref"]
groq = ["groq"]
ollama = ["openai"]
openai = ["openai"]
xai = ["openai"]
deepseek = ["openai"]

[project.urls]
Homepage = "https://github.com/jparr721/simplemind-ng"
Source = "https://github.com/jparr721/simplemind-ng"
Issues = "https://github.com/jparr721/simplemind-ng/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
